# openstack-project-generator

./: .gitignore  LICENSE  README.md  generate.sh
p_template/: .gitignore  README.rst  pylintrc  requirements.txt  run_tests.sh  setup.cfg  tox.ini
p_template/<project_name>/: context.py  manager.py  policy.py  service.py  test.py  utils.py
p_template/<project_name>/<manager_service_name>/: __init__.py  manager.py  rpcapi.py
p_template/<project_name>/api/: common.py  extensions.py  urlmap.py  versions.py
p_template/<project_name>/api/contrib/: __init__.py
p_template/<project_name>/api/middleware/: fault.py
p_template/<project_name>/api/openstack/: __init__.py
p_template/<project_name>/api/views/: versions.py
p_template/<project_name>/cmd/: all.py  manage.py
p_template/<project_name>/common/: config.py  sqlalchemyutils.py
p_template/<project_name>/config/: <project_name>-config-generator.conf  generate_<project_name>_opts.py
p_template/<project_name>/db/: __init__.py  api.py
p_template/<project_name>/db/sqlalchemy/: api.py
p_template/<project_name>/db/sqlalchemy/migrate_repo/versions/: 001_<project_name>_init.py
p_template/<project_name>/objects/: base.py
p_template/<project_name>/openstack/common/: gettextutils.py
p_template/<project_name>/openstack/common/config/: generator.py
p_template/<project_name>/tests/unit/: fake_notifier.py  fake_service.py  test_cmd.py  test_db_api.py  test_fixtures.py  test_hacking.py  test_service.py  test_test_utils.py
p_template/<project_name>/tests/unit/api/: fakes.py  test_common.py  test_extensions.py  test_versions.py  test_xmlutil.py
p_template/<project_name>/tests/unit/api/extensions/: foxinsocks.py
p_template/<project_name>/tests/unit/api/middleware/: test_faults.py
p_template/<project_name>/tests/unit/api/openstack/: test_wsgi.py
p_template/<project_name>/tests/unit/db/: fakes.py
p_template/<project_name>/tests/unit/objects/: __init__.py  test_base.py
p_template/<project_name>/tests/unit/wsgi/: test_wsgi.py
p_template/<project_name>/wsgi/: common.py  eventlet_server.py  wsgi.py
p_template/releasenotes/source/: conf.py  index.rst
p_template/tools/: install_venv.py
template/: .testr.conf  HACKING.rst  openstack-common.conf
template/<project_name>/: __init__.py  exception.py  flow_utils.py  i18n.py  rpc.py  version.py
template/<project_name>/<manager_service_name>/: api.py
template/<project_name>/api/: __init__.py  xmlutil.py
template/<project_name>/cmd/: <manager_service_name>.py  api.py
template/<project_name>/db/: base.py  migration.py
template/<project_name>/hacking/: checks.py
template/<project_name>/locale/: <project_name>.pot
template/<project_name>/objects/: base.py
template/<project_name>/testing/: README.rst
template/tools/: bandit.yaml  enable-pre-commit-hook.sh  lintstack.py
(+36 files in other folders)
