[metadata]
name = <project_name>
summary = OpenStack DR Recovery
description-file =
    README.rst
author = ECONE
author-email = cloud@hihuron.com
home-page = http://www.hihuron.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    <project_name>

[entry_points]
oslo.config.opts =
    <project_name> = <project_name>.opts:list_opts
    keystonemiddleware = keystonemiddleware.auth_token:list_opts
    oslo_concurrency = oslo_concurrency.opts:list_opts
    oslo.messaging = oslo_messaging.opts:list_opts
    oslo.db.concurrency = oslo.db.concurrency:list_opts
console_scripts =
    <project_name>-all = <project_name>.cmd.all:main
    <project_name>-api = <project_name>.cmd.api:main
    <project_name>-manage = <project_name>.cmd.manage:main
    <project_name>-rootwrap = oslo_rootwrap.cmd:main
    <project_name>-recover = <project_name>.cmd.recover:main
# These are for backwards compat with Havana notification_driver configuration values
oslo_messaging.notify.drivers =
    <project_name>.openstack.common.notifier.log_notifier = oslo_messaging.notify._impl_log:LogDriver
    <project_name>.openstack.common.notifier.no_op_notifier = oslo_messaging.notify._impl_noop:NoOpDriver
    <project_name>.openstack.common.notifier.rpc_notifier2 = oslo_messaging.notify._impl_messaging:MessagingV2Driver
    <project_name>.openstack.common.notifier.rpc_notifier = oslo_messaging.notify._impl_messaging:MessagingDriver
    <project_name>.openstack.common.notifier.test_notifier = oslo_messaging.notify._impl_test:TestDriver
# These are for backwards compatibility with Juno middleware configurations
oslo_middleware =
    <project_name>.api.middleware.sizelimit = oslo_middleware.sizelimit
    <project_name>.openstack.common.middleware.request_id = oslo_middleware.request_id

<project_name>.database.migration_backend =
    sqlalchemy = oslo_db.sqlalchemy.migration

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = <project_name>/locale
domain = <project_name>

[update_catalog]
domain = <project_name>
output_dir = <project_name>/locale
input_file = <project_name>/locale/<project_name>.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = <project_name>/locale/<project_name>.pot
